--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,10 @@
 pruebasPDF/
 plantilla.html
 php/vendor/
+img/123.jpg
+img/12345678.jpeg
+img/12345679.jpeg
+img/IM.png
+img/ISC.gif
+img/ISC.jpg
+img/ISC2.jpg
